refactor(tool)!: 生产化基础值与业务枚举工具
- 修复字符串 Unicode 截取和区域设置边界
- 统一集合转换的顺序、可变性与参数契约
- 新增 CodeEnum 和 DescribedEnum 业务枚举契约
- 重构枚举查找并移除静默反射失败
- 完善身份证、URL、邮箱和 IPv4 校验
- 新增基础值稳定错误码和统一异常模型
- 更新关键测试与使用迁移文档